Stop forcing the ZGC garbage collector on desktop run tasks so the Scene Editors launch on the JetBrains Runtime.